@@ -9,6 +9,7 @@ package org.javaee7.jaxrs.endpoint;
 import static org.junit.Assert.assertEquals;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 import javax.ws.rs.client.Client;
@@ -59,7 +60,7 @@ public class MyResourceTest {
     @Before
     public void setupClass() throws MalformedURLException {
         Client client = ClientBuilder.newClient();
-        target = client.target(new URL(base, "webresources/fruit").toExternalForm());
+        target = client.target(URI.create(new URL(base, "webresources/fruit").toExternalForm()));
     }
     
     /**
